--- a/web.3.4.config
+++ b/web.3.4.config
@@ -20,7 +20,7 @@
            path="handler.fcgi"
            verb="*"
            modules="FastCgiModule"
-           scriptProcessor="D:\home\python364x64\python.exe|D:\home\python364x64\Scripts\wfastcgi.py"
+           scriptProcessor="D:\home\python364x64\python.exe|D:\home\python364x64\wfastcgi.py"
            resourceType="Unspecified"
            requireAccess="Script" />
     </handlers>
